--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -27,7 +27,7 @@
                     <ul class="dropdown-menu">
                         <!-- <li><a href="{% url 'tareas_list' %}">Tareas</a></li> -->
                         <li><a href="{% url 'rutinas_list' %}">Rutinas</a></li>
-                        <li><a href="{% url 'planes_list' %}">Programacion</a></li>
+                        <li><a href="{% url 'planes_list' %}">Planes</a></li>
                         <li class="divider"></li>
                         <li><a href="{% url 'boletas_list' %}">Boletas</a></li>
                     </ul>
