--- a/sgim/templates/mantto/nuevo_plan.html
+++ b/sgim/templates/mantto/nuevo_plan.html
@@ -155,7 +155,7 @@ $(document).ready(function() {
                 { name: 'id'},
                 { name: 'nombre_completo'}
             ],
-            url: '/api/catalogo/personal/'
+            url: '/api/catalogo/personal/?cargo=1'
         };
         var personalAdapter = new $.jqx.dataAdapter(personalSource);
 
